# amackerels-musings

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  services.rs
src/templates/: 404.html  index.html
templates/: 404.html  base.html  blog_post.html  index.html
