[package]
name = "amackerels-musings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.*"
axum = { version = "0.7.*", features = ["tracing"] }
clap = { version = "4.5.*", features = ["env"] }
serde = { version = "1.0.*", features = ["derive"] }
tokio = { version = "1.37.*", features = ["full"] }
tower = "0.4.*"
tower-http = { version = "0.5.*", features = ["trace", "request-id", "cors", "propagate-header"] }
tower_governor = { version = "0.4.*", features = ["axum", "tracing"] }
tracing = "0.1.*"
tracing-subscriber = { version = "0.3.*", features = ["env-filter"] }
uuid = { version = "1.8.*", features = ["v4", "v7", "serde"] }
